--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul id="menu-lista"></ul>
 
     <script>
-        fetch("http://localhost/Update-Web-Data/api.php") // Cambia por la URL real de tu API
+        fetch("http://web-test.infinityfreeapp.com/api.php") // Cambia por la URL real de tu API
             .then(response => response.json())
             .then(data => {
                 let menuLista = document.getElementById("menu-lista");
